# ChangeLog for sci-libs/openblas
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Sep 2014; Mark Wright <gienah@gentoo.org> +openblas-0.2.11.ebuild,
  openblas-9999.ebuild,
  +files/openblas-0.2.11-openblas_config_header_same_between_ABIs.patch,
  -files/openblas-9999-cpuid_x86.patch:
  Remove openblas-9999-cpuid_x86.patch as a similar change has been applied by
  upstream.  Tweak the openblas_config.h file to be the same between ABIs.

*openblas-0.2.11 (30 Aug 2014)

  30 Aug 2014; Mark Wright <gienah@gentoo.org> +openblas-0.2.11.ebuild,
  openblas-9999.ebuild:
  Bump to 0.2.11 using multi build

  26 Apr 2014; Mark Wright <gienah@gentoo.org> openblas-9999.ebuild:
  Add >=virtual/blas-2.1-r2[int64?] and >=virtual/cblas-2.0-r1[int64?] to
  RDEPEND. Use separate eselect modules for blas, blas-int64, cblas and
  cblas-int64.

  19 Feb 2014; Mark Wright <gienah@gentoo.org> openblas-9999.ebuild:
  Thanks to sfabbro: dodoc should be outside the function, they do not change

  18 Feb 2014; Mark Wright <gienah@gentoo.org> openblas-9999.ebuild:
  multibuild openblas when USE=int64 is specified.

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> openblas-9999.ebuild,
  metadata.xml:
  Switch from git-2 to git-r3

*openblas-0.2.8 (06 Aug 2013)

  06 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> +openblas-0.2.8.ebuild,
  -openblas-0.2.7.ebuild, openblas-9999.ebuild:
  sci-libs/openblas: Version bump

*openblas-0.2.7 (24 Jul 2013)

  24 Jul 2013; Sébastien Fabbro <bicatali@gentoo.org> +openblas-0.2.7.ebuild,
  -files/openblas-aliasing.patch, -files/openblas-sharedlibs-0.2.patch,
  -openblas-0.2.6.ebuild, metadata.xml, openblas-9999.ebuild:
  sci-libs/openblas: Version bump. Rewrote ebuild to try to follow upstream
  closer

*openblas-0.2.6 (03 Mar 2013)

  03 Mar 2013; Sébastien Fabbro <bicatali@gentoo.org> +openblas-0.2.6.ebuild,
  -openblas-0.2.5.ebuild, openblas-9999.ebuild:
  sci-libs/openblas: Version bump
